--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,7 @@ services:
       - NODE_ENV=development
     env_file:
       - ./env/.env.backend
-    command: make start_backend
+    command: make start_backend-dev
     depends_on:
       postgres:
         condition: service_healthy
