--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node ./dist/main.js"
+    "start": "node ./dist/main.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/main.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.2",
@@ -13,6 +14,7 @@
   },
   "devDependencies": {
     "supabase": "^2.23.4",
+    "ts-node-dev": "^2.0.0",
     "wrangler": "^3.0.0"
   }
 }
