fix: 統合疎通API実装

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,6 @@
+echo "Loading environment variables from .envrc"
 set -a
-for file in ../env/env.*; do
+for file in ./env/.env.*; do
   # sample ファイルはスキップ
   if [[ -f "$file" && "$file" != *.sample ]]; then
     source "$file"
