--- a/env/.env.backend.sample
+++ b/env/.env.backend.sample
@@ -1,3 +1,5 @@
-DB_URL=postgres://postgres:postgres@localhost:5432
+NODE_ENV=development
+
 DB_USER=postgres
-DATABASE_PASSWORD=postgres
+DB_PASS=postgres
+DB_NAME=be_local
