--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,9 +10,14 @@
   "dependencies": {
     "@hono/node-server": "^1.14.2",
     "@monorepo/common": "workspace:*",
-    "hono": "^3.0.0"
+    "dotenv": "^16.4.5",
+    "hono": "^3.0.0",
+    "postgres": "^3.4.3"
   },
   "devDependencies": {
+    "@ts-safeql/eslint-plugin": "^1.1.3",
+    "@types/node": "^20.11.24",
+    "libpg-query": "^15.0.2",
     "supabase": "^2.23.4",
     "ts-node-dev": "^2.0.0",
     "wrangler": "^3.0.0"
