--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,5 @@
 {
   "extends": "./tsconfig.base.json",
   "files": [],
-  "references": [
-    { "path": "./common" },
-    { "path": "./frontend" },
-    { "path": "./backend" }
-  ]
+  "references": []
 }
