--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -2,9 +2,11 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": ".",
     "module": "CommonJS",
-    "target": "ES2022"
+    "target": "ES2022",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
-  "include": ["src"]
+  "include": ["src", "app", "cmd", "configs"]
 }
