--- a/env/.env.dev.sample
+++ b/env/.env.dev.sample
@@ -1,3 +1,6 @@
 PATH=${PWD}/bin:${PATH}
 
 DB_URL_DOCKER=postgres://postgres:postgres@host.docker.internal:5432
+
+DB_URL="postgres://postgres:postgres@localhost:5432"
+DB_SCHEMA=public
