--- a/env/.env.backend.sample
+++ b/env/.env.backend.sample
@@ -3,3 +3,7 @@ NODE_ENV=development
 DB_USER=postgres
 DB_PASS=postgres
 DB_NAME=be_local
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
