--- a/backend/package.json
+++ b/backend/package.json
@@ -2,26 +2,29 @@
   "name": "@monorepo/backend",
   "version": "1.0.0",
   "private": true,
+  "_moduleAliases": {
+    "@backend": "dist"
+  },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "node ./dist/cmd/server/local.js",
-    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register cmd/server/local.ts",
-    "pgtyped": "pgtyped",
-    "pgtyped:watch": "pgtyped --watch",
+    "build": "prisma generate && tsc -p tsconfig.json",
+    "start": "node -r module-alias/register ./dist/cmd/server/local.js",
+    "dev": "ts-node-dev --loader ts-node/esm --respawn --transpile-only -r tsconfig-paths/register cmd/server/local.ts",
+    "pgtyped": "pgtyped --config pg_config.json",
+    "pgtyped:watch": "pgtyped --watch --config pg_config.json",
     "generate:openapi": "ts-node -r tsconfig-paths/register cmd/tools/gen_openapi.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.2",
     "@hono/zod-openapi": "^0.9.6",
     "@pgtyped/runtime": "^2.4.2",
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.9.0",
     "dotenv": "^16.4.5",
     "google-auth-library": "^9.15.1",
     "hono": "^3.0.0",
     "inversify": "^7.5.2",
+    "module-alias": "^2.2.3",
     "pg": "^8.16.0",
     "postgres": "^3.4.3",
-    "prisma": "^6.8.2",
     "reflect-metadata": "^0.2.2",
     "typed-sql": "^0.10.0",
     "zod": "^3.22.4",
@@ -33,6 +36,7 @@
     "@types/pg": "^8.15.2",
     "libpg-query": "^15.0.2",
     "pgtyped": "^0.0.1",
+    "prisma": "^6.9.0",
     "ts-auto-mock": "^3.7.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
