--- a/env/.env.backend.sample
+++ b/env/.env.backend.sample
@@ -4,6 +4,8 @@ DB_USER=postgres
 DB_PASS=postgres
 DB_NAME=be_local
 
+DB_URL=postgres://postgres:postgres@postgres:5432/be_local
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
