--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "esbuild": "^0.17.0",
+    "eslint": "^9.29.0",
+    "eslint-plugin-import": "^2.31.0",
     "pnpm": ">=10.1.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.34.0"
   },
   "scripts": {
+    "lint": "eslint . --fix",
+    "lint:check": "eslint . ",
     "preinstall": "npx -y only-allow pnpm",
     "frontend": "pnpm -F 'frontend'",
     "backend": "pnpm -F 'backend'",
