--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,9 +2,9 @@
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": ".",
     "lib": ["dom", "dom.iterable", "esnext"],
     "types": ["node", "vite"]
   },
-  "include": ["src"]
+  "include": ["src", "generated"]
 }
