chore: update hono

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "prisma generate && tsc -p tsconfig.json",
     "start": "node -r module-alias/register ./dist/cmd/server/local.js",
-    "dev": "ts-node-dev --loader ts-node/esm --respawn --transpile-only -r tsconfig-paths/register cmd/server/local.ts",
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register cmd/server/local.ts",
     "pgtyped": "pgtyped --config pg_config.json",
     "pgtyped:watch": "pgtyped --watch --config pg_config.json",
     "generate:openapi": "ts-node -r tsconfig-paths/register cmd/tools/gen_openapi.ts"
@@ -19,7 +19,7 @@
     "@prisma/client": "^6.9.0",
     "dotenv": "^16.4.5",
     "google-auth-library": "^9.15.1",
-    "hono": "^3.0.0",
+    "hono": "^3.12.12",
     "inversify": "^7.5.2",
     "module-alias": "^2.2.3",
     "pg": "^8.16.0",
