--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,7 @@
     "build": "prisma generate && tsc -p tsconfig.json",
     "start": "node -r module-alias/register ./dist/cmd/server/local.js",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register cmd/server/local.ts",
-    "pgtyped": "pgtyped --config pg_config.json",
-    "pgtyped:watch": "pgtyped --watch --config pg_config.json",
-    "generate:openapi": "ts-node -r tsconfig-paths/register cmd/tools/gen_openapi.ts"
+    "generate:openapi": "prisma generate && ts-node -r tsconfig-paths/register cmd/tools/gen_openapi.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.2",
