--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
     env_file:
       - ./env/.env.frontend
     command: make start_frontend
+    networks:
+      - backend_network
 
   backend:
     build:
